--- a/src/sections/TopSection.css
+++ b/src/sections/TopSection.css
@@ -28,6 +28,7 @@
   
   .TopSection img {
     width: 294px;
+    height: 294px;
     box-shadow: 12px 12px 14px 0 rgba(0,0,0,0.31);
   }
 
